Recycler view xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CCAndroidTraining">
         <activity
-            android:name=".RecyclerActivity"
+            android:name=".activities.LoginScreen"
             android:exported="true" />
         <activity
-            android:name=".DialogActivity"
+            android:name=".activities.UIWidgets"
             android:exported="true" />
         <activity
-            android:name=".UIWidgets"
+            android:name=".activities.RecyclerActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.DialogActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
