--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CCAndroidTraining">
         <activity
-            android:name=".activities.LoginScreen"
-            android:theme="@style/LoginScreen"
-            android:exported="true" />
-        <activity
-            android:name=".activities.UIWidgets"
-            android:exported="true" />
-        <activity
-            android:name=".activities.RecyclerActivity"
-            android:exported="true" />
-        <activity
-            android:name=".activities.DialogActivity"
-            android:exported="true" />
+            android:name=".activities.ForgotPassword"
+            android:exported="true"
+            android:parentActivityName=".activities.LoginScreen"/>
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/LoginScreen" />
+        <activity
+            android:name=".activities.UIWidgets"
+            android:exported="true"
+            android:parentActivityName=".activities.MainActivity"/>
+        <activity
+            android:name=".activities.RecyclerActivity"
+            android:exported="true"
+            android:parentActivityName=".activities.DialogActivity"/>
+        <activity
+            android:name=".activities.DialogActivity"
+            android:exported="true"
+            android:parentActivityName=".activities.UIWidgets"/>
+        <activity
+            android:name=".activities.LoginScreen"
+            android:exported="true"
+            android:theme="@style/LoginScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
