--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CCAndroidTraining">
         <activity
+            android:name=".activities.AuthNavigationActivity"
+            android:exported="true"
+            android:label="@string/title_activity_auth_navigation"
+            android:theme="@style/Theme.CCAndroidTraining.NoActionBar" />
+        <activity
             android:name=".activities.ForgotPassword"
             android:exported="true"
-            android:parentActivityName=".activities.LoginScreen"/>
+            android:parentActivityName=".activities.LoginScreen" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
@@ -20,15 +25,15 @@
         <activity
             android:name=".activities.UIWidgets"
             android:exported="true"
-            android:parentActivityName=".activities.MainActivity"/>
+            android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.RecyclerActivity"
             android:exported="true"
-            android:parentActivityName=".activities.DialogActivity"/>
+            android:parentActivityName=".activities.DialogActivity" />
         <activity
             android:name=".activities.DialogActivity"
             android:exported="true"
-            android:parentActivityName=".activities.UIWidgets"/>
+            android:parentActivityName=".activities.UIWidgets" />
         <activity
             android:name=".activities.LoginScreen"
             android:exported="true"
