--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CCAndroidTraining">
         <activity
+            android:name=".activities.TabActivity"
+            android:exported="true"
+            android:label="@string/title_activity_tab"
+            android:theme="@style/Theme.CCAndroidTraining.NoActionBar" />
+        <activity
             android:name=".activities.BottomNavigation"
             android:exported="true"
             android:label="@string/title_activity_bottom_navigation" />
