--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,13 @@
             android:exported="true" />
         <activity
             android:name=".activities.UIWidgets"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".activities.MainActivity"
+            android:label="@string/title_ui_widgets"/>
         <activity
             android:name=".activities.RecyclerActivity"
+            android:parentActivityName=".activities.UIWidgets"
+            android:label="@string/title_recycler"
             android:exported="true" />
         <activity
             android:name=".activities.DialogActivity"
