--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CCAndroidTraining">
         <activity
+            android:name=".activities.SignInScreen"
+            android:exported="true" />
+        <activity
+            android:name=".activities.ListViewExample"
+            android:exported="true"
+            android:label="@string/title_list_view"
+            android:parentActivityName=".activities.DialogActivity" />
+        <activity
+            android:name=".activities.BottomNavExample"
+            android:exported="true" />
+        <activity
             android:name=".activities.TabActivity"
             android:exported="true"
             android:label="@string/title_activity_tab"
-            android:theme="@style/Theme.CCAndroidTraining.NoActionBar"
-            android:parentActivityName=".activities.LoginScreen"/>
+            android:parentActivityName=".activities.BottomNavExample"
+            android:theme="@style/Theme.CCAndroidTraining.NoActionBar" />
         <activity
             android:name=".activities.BottomNavigation"
             android:exported="true"
@@ -22,6 +33,8 @@
         <activity
             android:name=".activities.AuthNavigationActivity"
             android:exported="true"
+            android:label="@string/app_name"
+            android:parentActivityName=".activities.BottomNavExample"
             android:theme="@style/Theme.CCAndroidTraining.NoActionBar" />
         <activity
             android:name=".activities.ForgotPassword"
@@ -38,10 +51,12 @@
         <activity
             android:name=".activities.RecyclerActivity"
             android:exported="true"
+            android:label="@string/title_recycler"
             android:parentActivityName=".activities.DialogActivity" />
         <activity
             android:name=".activities.DialogActivity"
             android:exported="true"
+            android:label="UI Buttons"
             android:parentActivityName=".activities.UIWidgets" />
         <activity
             android:name=".activities.LoginScreen"
